[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-real-video"
version = "0.2.0"
description = "Let Claude (or any LLM) actually watch a video — scene-aware, deduplicated frames + transcript, from a URL or local file."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LeoAido" }]
keywords = ["claude", "llm", "ai", "video", "ffmpeg", "whisper", "yt-dlp", "transcription", "vision"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "yt-dlp>=2024.1.0",
  "Pillow>=9.0.0",
]

[project.optional-dependencies]
whisper = ["openai-whisper>=20231117"]

[project.scripts]
claude-real-video = "claude_real_video.cli:main"
crv = "claude_real_video.cli:main"

[project.urls]
Homepage = "https://github.com/HUANGCHIHHUNGLeo/claude-real-video"
Issues = "https://github.com/HUANGCHIHHUNGLeo/claude-real-video/issues"

[tool.setuptools.packages.find]
where = ["src"]
